infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: auth
    template:
        metadata:
            labels:
                app: auth
        spec:
            containers:
                - name: auth
                  image: shabil/auth
                  readinessProbe:
                      exec:
                          command:
                              - /bin/sh
                              - -c
                              - |
                                  # Check if Kafka is reachable
                                  if nc -z kafka-service 9092; then
                                    exit 0
                                  else
                                    exit 1
                                  fi
                      initialDelaySeconds: 5
                      periodSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
    name: auth-srv
spec:
    selector:
        app: auth
    ports:
        - name: auth
          protocol: TCP
          port: 3000
          targetPort: 3000
