infra/k8s/kafka-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: zookeeper
    name: zookeeper
spec:
    replicas: 1
    selector:
        matchLabels:
            app: zookeeper
    template:
        metadata:
            labels:
                app: zookeeper
        spec:
            containers:
                - image: wurstmeister/zookeeper
                  imagePullPolicy: IfNotPresent
                  name: zookeeper
                  ports:
                      - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: zookeeper-service
    name: zookeeper-service
spec:
    type: NodePort
    ports:
        - name: zookeeper-port
          port: 2181
          nodePort: 30181
          targetPort: 2181
    selector:
        app: zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: kafka-broker
    name: kafka-broker
spec:
    replicas: 1
    selector:
        matchLabels:
            app: kafka-broker
    template:
        metadata:
            labels:
                app: kafka-broker
        spec:
            hostname: kafka-broker
            containers:
                - env:
                      - name: KAFKA_BROKER_ID
                        value: "1"
                      - name: KAFKA_ZOOKEEPER_CONNECT
                        value: zookeeper-service:2181
                      - name: KAFKA_LISTENERS
                        value: PLAINTEXT://:9092
                      - name: KAFKA_ADVERTISED_LISTENERS
                        value: PLAINTEXT://kafka-broker:9092
                  image: wurstmeister/kafka
                  imagePullPolicy: IfNotPresent
                  name: kafka-broker
                  ports:
                      - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: kafka-broker
    name: kafka-service
spec:
    selector:
        app: kafka-broker
    ports:
        - name: kafka-broker
          protocol: TCP
          port: 9092
          targetPort: 3000
