infra/k8s/post-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: post-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: post
    template:
        metadata:
            labels:
                app: post
        spec:
            containers:
                - name: post
                  image: us.gcr.io/quickhire-dev-412913/post:ca40f2b-dirty
---
apiVersion: v1
kind: Service
metadata:
    name: post-srv
spec:
    selector:
        app: post
    ports:
        - name: post
          protocol: TCP
          port: 3000
          targetPort: 3000
