infra/k8s/ingress-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: "true"
spec:
    rules:
        - host: www.raazi.live
          http:
              paths:
                  - path: /api/users/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: auth-srv
                            port:
                                number: 3000
                  - path: /api/profile/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: profile-srv
                            port:
                                number: 3000
                  - path: /api/posts/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: posts-srv
                            port:
                                number: 3000
                  - path: /api/chats/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: chats-srv
                            port:
                                number: 3000
                  - path: /api/jobs/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: jobs-srv
                            port:
                                number: 3000
                  - path: /api/payments/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: payments-srv
                            port:
                                number: 3000
                  - path: /?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: client-srv
                            port:
                                number: 3000
